--- a/src/components/module/home/StyleHome.css
+++ b/src/components/module/home/StyleHome.css
@@ -48,7 +48,9 @@ html {
 }
 
 
-
+.rounded-circle{
+  object-fit: cover !important;
+}
 .navbar{
   background-color: #fff;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
