--- a/src/components/module/profil/profil.css
+++ b/src/components/module/profil/profil.css
@@ -34,7 +34,7 @@ body{
   margin-top: 70px;
 }
 .image-text{
-  margin-top: 80px;
+  padding-top: 80px;
 }
 .title-dashboard{
   font-weight: 800;
@@ -100,9 +100,10 @@ margin-top: 5px;
       height: 295px !important;
       margin-top: 5px !important;
   }
-  .image,.image-text{
+  .image{
     margin-top: 5px;
   }
+  
   .profil-form{
     margin-left: 2px;
     margin-top: 130px !important;
