--- a/src/Pages/Products/style.css
+++ b/src/Pages/Products/style.css
@@ -1,6 +1,7 @@
-.my-bag{
+body {
     overflow-x: hidden;
-}
+  }
+  
 .btn-home{
     height: 45px;
     margin-top: 40px;
@@ -10,10 +11,16 @@
     margin-left: 20px;
     margin-top: 40px;
 }
+/* .card-body{
+    background-color: black;
+} */
 .card-custom{
-    
+    /* height: 100%; */
     margin-left: 30px;
     width: 100%;
+}
+.search-input{
+    
 }
 @media screen and (max-width: 1230px){
     .my-products{
@@ -22,16 +29,31 @@
     }
 }
 @media screen and (max-width: 576px){
+    .body{
+        overflow-x: hidden;
+    }
+    .container-custom{
+        margin: auto;
+        width: 95%;
+        height: 100%;
+    }
+    .my-products{
+        width: 50%;
+        margin: auto;
+        /* margin-right: 30px; */
+        margin-left: -35px;
+        margin-top: 40px;
+    }
     .profil-form{
         margin-left: -15px !important;
     }
     .nav-search{
         margin-left: 0px !important;
     }
-    .my-products{
+    /* .my-products{
         margin-top: 190px !important;
         margin-left: -24px !important;
-    }
+    } */
     .table-responsive{
         font-size: 10px;
     }
