--- a/src/components/module/profil/profil.css
+++ b/src/components/module/profil/profil.css
@@ -1,47 +1,44 @@
-body{
-  overflow-x: auto;
+body {
+  overflow-x: hidden;
 }
 
-.edit-profil{
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
-    color: #9B9B9B;
-    margin-top: -8px;
+.edit-profil {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 24px;
+  color: #9B9B9B;
+  margin-top: -8px;
 }
 
-.text-profil{
+.text-profil {
   font-weight: 600;
 }
-.select-profil{
-    background-color: #fff;
-    width: 30%;
-    height: 1910px !important;
-    margin-top: -10px !important;
-    /* border: 1px solid #9B9B9B; */
-    /* margin-left: -10px !important; */
-}
-.profil-avatar,.select-profil{
+
+.profil-avatar {
   margin-left: -44px;
   /* width: 325px; */
 }
-.profil-form{
-  width: 70%  !important;
-  margin-top: 40px;
-  margin-left: 0px !important;
+
+.nav-tabs,
+.nav-link {
+  background: transparent !important;
 }
-.image{
+
+.image {
   margin-top: 70px;
 }
-.image-text{
+
+.image-text {
   padding-top: 80px;
 }
-.title-dashboard{
+
+.title-dashboard {
   font-weight: 800;
-font-size: 15px;
-line-height: 24px;
-margin-top: 5px;
+  font-size: 15px;
+  line-height: 24px;
+  margin-top: 5px;
 }
+
 .btn:focus {
   /* color: #fff; */
   /* background-color: transparent; */
@@ -49,72 +46,70 @@ margin-top: 5px;
   box-shadow: none;
   outline: 0 none;
 }
-.t-body{
+
+.t-body {
   margin-left: -20px;
 }
 
-@media screen and (max-width: 1230px){
-  .select-profil{
-    width: 100%;
-    height: 320px !important;
-    margin-top: 5px !important;
-  }
-  .profil-form{
-    width: 95.5% !important;
-  }
-  .profil-form{
-    /* width: 70%  !important; */
-    margin-top: 40px;
-    margin-left: 18px !important;
-  }
-}
 
 
 @media (max-width: 576px) {
-  .search-nav{
+  .search-nav {
     /* width: 100% !important; */
     margin-left: -80px;
     margin-top: 10px;
     /* background-color: red; */
   }
-  .filter{
+
+  .filter {
     float: right;
     margin: 5px;
     width: 25%;
-      /* background-color: blue; */
+    /* background-color: blue; */
     margin-left: -70px !important;
   }
-  .profil-avatar, .profil-select{
+
+  .profil-avatar,
+  .profil-select {
     margin-left: 10px !important;
-    margin-top: 40px;
+    /* margin-top: 40px; */
   }
-  .photo-form{
-      border: 1px dotted #D4D4D4;
-      border-radius: 4px;
-      height: 1500px;
+
+  .photo-form {
+    border: 1px dotted #D4D4D4;
+    border-radius: 4px;
+    height: 1500px;
   }
-  .upload{
-      margin-top: 22px !important;
+
+  .upload {
+    margin-top: 22px !important;
   }
-  .select-profil{
-      height: 295px !important;
-      margin-top: 5px !important;
+
+  .select-profil {
+    height: 295px !important;
+    margin-top: 5px !important;
   }
-  .image{
+
+  .image {
     margin-top: 5px;
   }
-  
-  .profil-form{
+
+  .profil-form {
     margin-left: 2px;
     margin-top: 130px !important;
   }
-  .avatar{
-    margin-top: 200px !important;
+
+  .avatar {
+    padding-left: 10px !important;
+    margin-top: 20px !important;
   }
-  .select-profil{
+
+  .select-profil {
     margin-left: 30px;
   }
-  .post{
+
+  .post {
     font-size: 18px !important;
   }
+  
 }
