--- a/src/components/base/Card/style.css
+++ b/src/components/base/Card/style.css
@@ -2,12 +2,14 @@
     height: 210px;
     width: 100%;
     object-fit: cover;
+    padding: 5px;
+    border-radius: 10px;
 }
 .card1{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
-@media screen and (max-width: 576px){
+@media screen and (max-width: 771px){
     .img{
         object-fit: scale-down;
     }
